# fast-pdf-text

./: Cargo.toml  README.md  index.html  resume.json
src/: lib.rs  main.rs
